# tap-google-analtyics

./: README.md  meltano.yml  output.json  pyproject.toml  sample_config.json  setup.py  tap-google-analtyics-v4.sh  test.py  tox.ini
.devcontainer/: devcontainer.json  requirements.txt
.meltano/: analytics.json  meltano.db
.meltano/cache/: discovery.yml
.meltano/run/: bin
.meltano/run/tap-google-analytics/: tap.properties.json
.secrets/: sample_config.json
tap_google_analtyics/: stream.py  tap.py
tap_google_analtyics/tests/: __init__.py  test_core.py
tap_google_analtyics_v4/: stream.py
tap_google_analtyics_v4/tests/: __init__.py
tap_google_analytics/: report_generator.py  stream.py  tap.py
tap_google_analytics/tests/: test_core.py
